--- a/view/frontend/web/template/payment/pix-form.html
+++ b/view/frontend/web/template/payment/pix-form.html
@@ -45,7 +45,8 @@
                 <button class="action primary checkout"
                         type="submit"
                         data-bind="
-                        click: placeOrder,
+                        click: pixPlaceOrder,
+                        css: {disabled: !isPlaceOrderActionAllowed()},
                         attr: {title: $t('Place Order')}
                         ">
                     <span data-bind="i18n: 'Place Order'"></span>
