--- a/view/frontend/web/template/payment/pix-form.html
+++ b/view/frontend/web/template/payment/pix-form.html
@@ -40,6 +40,12 @@
             </fieldset>
         </form>
 
+        <div class="checkout-agreements-block">
+            <!-- ko foreach: $parent.getRegion('before-place-order') -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
+            <!-- /ko -->
+        </div>
+
         <div class="actions-toolbar">
             <div class="primary">
                 <button class="action primary checkout"
