move general functionality to basic classes and fix crypto

--- a/view/frontend/web/template/payment/crypto.html
+++ b/view/frontend/web/template/payment/crypto.html
@@ -28,7 +28,7 @@
                         data-bind="
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        click: placeOrder,
+                        click: cryptoPlaceOrder,
                         css: {disabled: !isPlaceOrderActionAllowed()}
                         "
                         class="action primary checkout"
